--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,24 @@
 <resources>
     <string name="app_name">calcTest</string>
     <string name="abc">abc</string>
+    <string name="ac">AC</string>
+    <string name="_8888888888">8888888888</string>
+    <string name="plusMinus">+/-</string>
+    <string name="percent">%</string>
+    <string name="divider">/</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="multiply">*</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="minus">-</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="plus">+</string>
+    <string name="zero">0</string>
+    <string name="point">.</string>
+    <string name="equal">=</string>
 </resources>
